--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir ${workdir}
 VOLUME ${workdir}
 WORKDIR ${workdir}
 
-ADD weather-0.0.1-SNAPSHOT.jar weather.jar
+ADD target/weather-0.0.1-SNAPSHOT.jar weather.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","weather.jar"]
